src/test/ui/privacy/private-item-simple.stderr
error[E0603]: function `f` is private
  --> $DIR/private-item-simple.rs:6:8
   |
LL |     a::f();
   |        ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0603`.
